# EdgeFitness-main

./: README.md
backend/: Cargo.toml
backend/Login/SignUp/: db.rs  main.rs  models.rs
backend/src/: main.rs
backend/src/models/: exercise.rs  gym.rs  mod.rs  provider.rs  review.rs  user.rs  workout.rs
backend/src/services/: auth.rs  database.rs  mod.rs  route_builder.rs
frontend/: Home.html  Login.HTML  MyFitnessPG.html  PrivateTrainer.html  Registration.html  ResetPassword.html  food.html  gymList.html  index.html
frontend/css/: HomeStyle.css  LoginStyle.css  RegStyle.css  ResetPassword.css  mfpStyle.css  searchGymListStyle.css
frontend/images/: Thumbs.db
frontend/js/: FetchUsername.js  LoginScripts.js  RegScripts.js  ResetPassword.js  Scripts.js  fetchFood.js  fetchGyms.js  fetchTrainer.js  mfpScripts.js
