[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version= "0.7.7", features =["macros"]}
mongodb = "3.1.0"
tokio-rustls = "0.26"
tokio = "1.40.0"
axum-server = {version = "0.7.1", features = ["tls-rustls"]}
tower-http = { version = "0.6.1", features = ["cors", "fs"] }
cmake = "0.1.51"
serde = "1.0.213"
serde_json = "1.0.132"  
futures = "0.3.31"
